Bug #3680: New Dashboard - On Safari there is big padding between rows

--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -47,6 +47,11 @@ html[dir="rtl"] {
   }
 }
 
+// issue with safari svg icons height
+svg {
+  height: 100%;
+}
+
 
 
 .v-menu__content{
